add mongoose dependency and configure database connection

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=oskar
-PASSWORD=123456
+DATABASE=mongodb+srv://oskarjablko84:<PASSWORD>@cluster0.zegqsjq.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_PASSWORD=QUbFbUw4NcDPxlz3
